Fitness_Chart/templates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker-app
  namespace: pavithra-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fitness-tracker-app
  template:
    metadata:
      labels:
        app: fitness-tracker-app
      annotations:
        ad.datadoghq.com/fitness-tracker-app.logs: >-
          [{"source":"nodejs","service":"fitness-tracker-service"},
           {"source":"nodejs","service":"fitness-tracker-app"}]
    spec:
      containers:
        - name: fitness-tracker-app
          image: pavithrasambath2003/fitness-tracker:latest
          ports:
            - containerPort: 5000
          # ✔ All configMap vars removed
          # ✔ Direct env variables added
---

apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-service
spec:
  selector:
    app: fitness-tracker-app
  ports:
  - port: 80
    targetPort: 5000
  type: LoadBalancer
